# blockxpand-icp

./: .gitignore  Cargo.toml  LICENSE  README.md  deploy.sh  dfx.json  install_dfx.sh
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  reward_drift.yml
candid/: aggregator.did  mock_icpswap.did  mock_infinity.did  mock_sonic.did
config/: ledgers.toml
docs/: ARCHITECTURE.md  DEPENDENCY_MAP.md
frontend/: _headers  index.html  main.js  styles.css
frontend/model/: index.html  snippet.txt
scripts/: build_frontend.sh  fetch_env.sh
src/: lib.rs
src/aggregator/: Cargo.toml  dex_fetchers.rs  ledger_fetcher.rs  mod.rs  neuron_fetcher.rs
src/aggregator/src/: cache.rs  cert.rs  cycles.rs  dex_fetchers.rs  error.rs  format.rs  ledger_fetcher.rs  lib.rs  logging.rs  lp_cache.rs  metrics.rs  neuron_fetcher.rs  pool_registry.rs  user_settings.rs  utils.rs  warm.rs
src/aggregator/src/dex/: dex_icpswap.rs  dex_infinity.rs  dex_sns.rs  dex_sonic.rs  mod.rs  registry.rs  sns_adapter.rs
src/aggregator_canister/: Cargo.toml  build.rs
src/aggregator_canister/src/: ic_http.rs  lib.rs
src/aggregator_wasm/: Cargo.toml
src/aggregator_wasm/src/: lib.rs
src/bx_core/: Cargo.toml
src/cli/: Cargo.toml
src/cli/src/: main.rs
src/declarations/aggregator_canister/: aggregator_canister.did.js
src/mock_icpswap_canister/: Cargo.toml
src/mock_icpswap_canister/src/: lib.rs
src/mock_infinity_canister/: Cargo.toml
src/mock_infinity_canister/src/: lib.rs
src/mock_ledger_canister/: Cargo.toml
src/mock_ledger_canister/src/: lib.rs
src/mock_sonic_canister/: Cargo.toml
src/mock_sonic_canister/src/: lib.rs
tests/: integration_tests.rs
