[package]
name = "blockxpand_icp"
version = "0.1.0"
edition = "2021"

[dependencies]
aggregator = { path = "src/aggregator" }
bx_core = { path = "src/bx_core" }

[dev-dependencies]
candid = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[workspace]
members = ["src/bx_core", "src/aggregator"]

