[package]
name = "blockxpand_icp"
version = "0.1.0"
edition = "2021"

[dependencies]
aggregator = { path = "src/aggregator" }
bx_core = { path = "src/bx_core" }

[dev-dependencies]
candid = { workspace = true }
tokio = { workspace = true }

[workspace]
members = ["src/bx_core", "src/aggregator", "src/aggregator_wasm"]

[workspace.dependencies]
candid = "=0.9.11"
ic-cdk = "=0.10.2"
ic-cdk-macros = "=0.7.1"
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
tokio = { version = "=1.46.0", features = ["macros", "rt", "time"] }
once_cell = "=1.19.0"
