[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
once_cell = "=1.19.0"
bx_core = { path = "../bx_core" }

[dev-dependencies]
[lib]
crate-type = ["cdylib", "rlib"]

