[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
tokio = { workspace = true }
once_cell = "=1.19.0"
bx_core = { path = "../bx_core" }
futures = { workspace = true }

[dev-dependencies]

[lib]
crate-type = ["rlib"]
