[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
futures = { workspace = true }
once_cell = "=1.19.0"
bx_core = { path = "../bx_core" }
dashmap = "5"
toml = "0.8"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
sha2 = "0.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
ic-agent = { workspace = true }

[dev-dependencies]


