[package]
name = "aggregator_canister"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
aggregator = { path = "../aggregator" }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
candid = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
async-graphql = { workspace = true }
once_cell = { workspace = true }
bx_core = { path = "../bx_core" }

[features]
export_candid = ["ic-cdk/wasi"]
claim = ["aggregator/claim"]

[lib]
crate-type = ["cdylib", "rlib"]
test = true
doctest = false

[build-dependencies]
chrono = { workspace = true }

[dev-dependencies]
bx_core = { path = "../bx_core" }
tokio = { workspace = true }
serial_test = "2"
rust_decimal = "1"
