[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ic-agent = { workspace = true }
candid = { workspace = true }
aggregator = { path = "../aggregator" }
bx_core = { path = "../bx_core" }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt"] }
serde_json = { workspace = true }
anyhow = "1"
